BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_State_Code__c.object
<CustomObject>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Date when the state code is valid. Same as Effective Date field on Resolution Code Data Admin object</description>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <description>Date when the state code is invalid. Same as Expiry Date field on Resolution Code Data Admin object</description>
        <label>Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
	<fields>
        <fullName>Hsvc_StateCodeDescriptionArgentina__c</fullName>
        <label>State Code Description(Argentina)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_StateCodeDescriptionChile__c</fullName>
        <label>State Code Description(Chile)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_StateCodeDescriptionEcuador__c</fullName>
        <label>State Code Description(Ecuador)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_StateCodeDescriptionPanama__c</fullName>
        <label>State Code Description(Panama)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_StateCodeDescriptionPeru__c</fullName>
        <label>State Code Description(Peru)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Look up to Product Code field on HNS Product object filtered by Product Type ‘Service’</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Products of Type Service can be selected</errorMessage>
            <filterItems>
                <field>HNS_Products__c.Product_Type__c</field>
                <operation>equals</operation>
                <value>Service</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HNS_Products__c</referenceTo>
        <relationshipLabel>State Codes</relationshipLabel>
        <relationshipName>Product_Codes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Code_Description_ENUS__c</fullName>
        <description>Description of State Code.
Ex: Fully Operational, MAC Address Invalid</description>
        <label>State Code Description(English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code_Description_ESCO__c</fullName>
        <description>This is state code description field for Spanish Language.</description>
        <label>State Code Description(Colombia)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code_Description__c</fullName>
        <description>This is the formula field for multiple language which will be referenced in Classes and will be displayed to user.</description>
        <formula>CASE($Label.Current_Language_Key,&apos;es_CO&apos;, IF(ISBLANK(State_Code_Description_ESCO__c), State_Code_Description_ENUS__c,State_Code_Description_ESCO__c), &apos;es_PA&apos;, IF(ISBLANK(Hsvc_StateCodeDescriptionPanama__c), State_Code_Description_ENUS__c,Hsvc_StateCodeDescriptionPanama__c),&apos;es_PE&apos;, IF(ISBLANK(Hsvc_StateCodeDescriptionPeru__c), State_Code_Description_ENUS__c,Hsvc_StateCodeDescriptionPeru__c),&apos;es_EC&apos;, IF(ISBLANK(Hsvc_StateCodeDescriptionEcuador__c), State_Code_Description_ENUS__c,Hsvc_StateCodeDescriptionEcuador__c),&apos;es_CL&apos;, IF(ISBLANK(Hsvc_StateCodeDescriptionChile__c), State_Code_Description_ENUS__c,Hsvc_StateCodeDescriptionChile__c),&apos;es_AR&apos;, IF(ISBLANK(Hsvc_StateCodeDescriptionArgentina__c), State_Code_Description_ENUS__c,Hsvc_StateCodeDescriptionArgentina__c), State_Code_Description_ENUS__c)</formula>
        <label>State Code Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Active__c</fullName>
        <description>To find out whether or not a State Code is Active</description>
        <formula>IF( AND( Effective_Date__c &lt;= TODAY() , Expiry_Date__c &gt; TODAY()),True, False)</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>State Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State_Code_Description__c</columns>
        <columns>Product_Code__c</columns>
        <columns>is_Active__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiry_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>State Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>State Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ExpiryDateCannotBeSetUpInPast</fullName>
        <active>true</active>
        <description>This validation rule ensures that the expiry date is set in future and is greater that the effective date</description>
        <errorConditionFormula>OR(Expiry_Date__c &lt; TODAY(),Expiry_Date__c &lt; Effective_Date__c)</errorConditionFormula>
        <errorDisplayField>Expiry_Date__c</errorDisplayField>
        <errorMessage>Expiry Date cannot be set in past and cannot be less than the effective date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StateCodeDescriptionNotBlank</fullName>
        <active>true</active>
        <description>This validation checks that atleast any one of the description field should not be empty.</description>
        <errorConditionFormula>((State_Code_Description_ESCO__c ==Null || State_Code_Description_ESCO__c ==&apos;&apos;) &amp;&amp;( State_Code_Description_ENUS__c ==NULL || State_Code_Description_ENUS__c ==&apos;&apos;))</errorConditionFormula>
        <errorMessage>Please enter value in atleast One description field.</errorMessage>
    </validationRules>
</CustomObject>